crates/agents/tests/snapshots/personas__writing_style_marco.snap
---
source: crates/agents/tests/personas.rs
expression: format_writing_style_for_prompt(&p.writing_style)
---

## Writing Style Guidelines
**Tone:** Maintain a polished, business-appropriate voice
**Vocabulary:** Use everyday words accessible to all readers
**Sentences:** Keep sentences brief and punchy
**Formality:** Balance formality - neither stiff nor overly casual
**Perspective:** Maintain objective distance, referring to "visitors" or "travelers"
**Description:** Focus on concrete facts and practical information
