crates/agents/tests/snapshots/personas__writing_style_sophia.snap
---
source: crates/agents/tests/personas.rs
expression: format_writing_style_for_prompt(&p.writing_style)
---

## Writing Style Guidelines
**Tone:** Convey expertise and credibility with confidence
**Vocabulary:** Employ rich, varied vocabulary for educated readers
**Sentences:** Use moderate-length sentences for clarity
**Formality:** Use proper, respectful language
**Perspective:** Maintain objective distance, referring to "visitors" or "travelers"
**Description:** Paint vivid pictures that stir emotions and imagination
